--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "prettier": "^3.0.1"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": ["prettier --write", "git add"]
+    "*.{js,jsx,ts,tsx,html}": ["prettier --write", "git add"]
   },
   "husky": {
     "hooks": {
